5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1836_1273.log
== TEST (2019-06-25 11:24:11) 
-- CODE:
saida = array[50,-120,350,870]
saida = saida.T
eq	 = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    saida = array[50,-120,350,870]
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:24:43) 
-- CODE:
from numpy import*
from numpy.lignalg import*
saida = array[50,-120,350,870]
saida = saida.T
eq	 = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:24:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array[50,-120,350,870]
saida = saida.T
eq	 = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:25:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50,-120,350,870])
saida = saida.T
eq	 = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:27:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50,-120,350,870])
saida = saida.T
eq	 = array([[1,1,0,0],[0,1,1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:27:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50,-120,350,870])
saida = saida.T
eq	 = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:27:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
saida = array([50,-120,350,870])
saida = saida.T
eq	 = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
saida = dot(inv(eq),saida)
print(saida)
-- EXECUTION TIME:
1.01524
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
